# la-minute-copilot

./: .gitignore  BMAD_SPRINT.md  OPENCLAW.md  README.md  generate.sh  pyproject.toml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-workflow-ci-validation-json.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  (+1 more)
presentations/: .~lock.La_Minute_Copilot_Modeles.pptx#  La_Minute_Copilot_Architecture.pptx  La_Minute_Copilot_Architecture_Prompt.pptx  La_Minute_Copilot_Modeles.pptx  La_Minute_Copilot_Outlook.pptx  La_Minute_Copilot_Personas.pptx  La_Minute_Copilot_PromptsAvances.pptx  La_Minute_Copilot_Prompts_Avances.pptx  La_Minute_Copilot_SharePoint.pptx  La_Minute_Copilot_SharePoint_OneDrive.pptx  SEASON-02-PLAN.md  analystes.json  architecture-prompt.json  base-connaissances.json  bilan-saison.json  conformite-gouvernance.json  edge.json  ep01-outlook.json  ep02-personas.json  ep03-modeles.json  ep04-sharepoint-onedrive.json  ep05-prompts-avances.json  ep06-architecture-prompt.json  excel.json  limites-copilot.json  loop-whiteboard.json  modeles.json  nouveaux-employes.json  outlook.json  personas.json  power-automate.json  powerpoint.json  prompts-avances.json  quick-parts-avancees.json  raccourcis-astuces.json  reunions-teams.json  scrum-masters.json  securite-confidentialite.json  sharepoint-onedrive.json  teams.json  (+2 more)
prompts/: outlook.md
schema/: la-minute-copilot.schema.json
scripts/: generate_outlook.py  generate_pptx.py  lucide_icons.py  parse.py  validate_all.sh
(+8 files in other folders)
